# libxmtp

./: '  .clippy.toml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .lnav-json-config.json  .mcp.json  .spi.yml  .swiftformat  .swiftlint.yml  .taplo.toml  1  2025-11-19 17:05:08.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  ONBOARDING.md  Package.resolved  Package.swift  README.md  ReactionV2Codec.d  ReactionV2Codec.swiftdeps  TECHNICAL_OVERVIEW.md  TEST_SCENARIOS.md  XMTP.podspec  buf.gen.yaml  build.gradle  cliff.toml  codecov.yml  deny.toml  device_sync_update.md  device_sync_v2.md  features.patch  flake.nix  (+24 more)
benches/: Cargo.toml  ident
benches/src/: streaming.rs
bindings_ffi/: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  build.rs  cross_build.sh  flake.nix  gen_kotlin.sh  get_android_artifact.sh  get_swift_artifact.sh  libxmtp-version.txt  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  run_swift_local.sh  setup_android_example.sh
bindings_ffi/benches/: create_client.rs
bindings_ffi/examples/: ExampleInstrumentedTest.kt  MainActivity.kt
bindings_ffi/include/: module.modulemap
bindings_ffi/scripts/: gen_kotlin.sh  setup_android_example.sh
bindings_ffi/src/: backup.rs  client.rs  consent.rs  conversation.rs  crypto.rs  fork_recovery.rs  identity.rs  inbox_owner.rs  lib.rs  logger.rs  math.swift  mathFFI.h  mathFFI.modulemap  message.rs  mls.rs  signature.rs  test_utils.rs  tonic_api_client.rs  types.rs  v2.rs  worker.rs  xmtpv3.udl
bindings_ffi/tests/: mvn2nix-lock.json  pom.xml  test_android.kts  test_generated_bindings.rs
bindings_flutter/: .flutter_rust_bridge.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flutter_rust_bridge.yml  pubspec.yaml
bindings_flutter/android/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties
bindings_flutter/artifacts/: .gitignore
bindings_flutter/example/: pubspec.yaml
bindings_flutter/ios/: xmtp_bindings_flutter.podspec
bindings_flutter/lib/: xmtp_bindings_flutter.dart
bindings_flutter/linux/: CMakeLists.txt
bindings_flutter/macos/: xmtp_bindings_flutter.podspec
bindings_flutter/scripts/: build-android.sh  build-apple.sh  build-linux.sh  setup-apple-artifacts.sh
bindings_flutter/src/: lib.rs  libxmtp_api.rs
bindings_flutter/test/: libxmtp_api_test.dart  v2_test.dart  v3_test.dart
bindings_node/: .prettierignore  CHANGELOG.md  Cargo.toml  README.md  package.json  vitest.config.mts  vitest.setup.mts
bindings_node/scripts/: AsyncStream.mjs  setup.mjs  streamTest.mjs  test.mjs  users.json  users.mjs  utils.mjs  version.ts
bindings_node/src/: client.rs  consent_state.rs  conversation.rs  conversations.rs  encoded_content.rs  enriched_message.rs  error_code.rs  error_helpers.rs  groups.rs  identity.rs  inbox_id.rs  inbox_state.rs  lib.rs  message.rs  messages.rs  mls_client.rs  permissions.rs  signatures.rs  streams.rs  test_utils.rs
bindings_node/test/: Client.test.ts  Conversation.test.ts  Conversations.test.ts  EnrichedMessage.test.ts  ErrorShape.test.ts  RemoteAttachmentEncryption.test.ts  codecs.test.ts  helpers.ts  inboxId.test.ts
bindings_swift/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  copy_xcframework_to_deriveddata.sh  copy_xcframework_to_swift.sh  get_swift_artifact.sh  make_xmtp_rust_swift_sources.sh  update_spec_version.sed
bindings_swift/src/: lib.rs  types.rs
bindings_wasm/: .gitignore  .prettierrc.cjs  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.js  package-lock.json  package.json  run_tests.sh  test.mjs  tsconfig.json
bindings_wasm/scripts/: copyFiles.js  version.ts
bindings_wasm/src/: client.rs  consent_state.rs  conversation.rs  conversations.rs  encoded_content.rs  enriched_message.rs  error.js  error.rs  groups.rs  identity.rs  inbox_id.rs  inbox_owner.rs  inbox_state.rs  lib.rs  local_storage_persistence.rs  logger.rs  messages.rs  mls.rs  mls_client.rs  opfs.rs  permissions.rs  signatures.rs  streams.rs  user_preferences.rs
bindings_wasm/test/: EnrichedMessage.test.ts  RemoteAttachmentEncryption.test.ts  client.test.ts  opfs.test.ts
bindings_wasm/tests/: client.rs  node.rs  web.rs
common/: Cargo.toml
common/src/: bench.rs  const.rs  error_code.rs  event_logging.rs  fmt.rs  hex.rs  lib.rs  logging.rs  macros.rs  retry.rs  stream_handles.rs  test.rs  time.rs  types.rs  wasm.rs
common/tests/: xmtp_macro_integration.rs
db_manager/: Cargo.toml
db_manager/src/: main.rs
db_tools/: Cargo.toml
db_tools/src/: main.rs
diesel-wasm-sqlite/: .gitignore  Cargo.toml  README.md  build.rs  esbuild.js  package-lock.json  package.js  package.json  rollup.config.js  sqlite_out.json  sqlite_out_pretty.json
diesel-wasm-sqlite/js-to-rust-test/: package.json
diesel-wasm-sqlite/src/: backend.rs  ffi.rs  lib.rs  package.js  sqlite_fixes.rs  sqlite_types.rs  wa-sqlite-diesel-bundle.js  wa-sqlite.wasm
diesel-wasm-sqlite/tests/: dedicated_web_worker.rs  row.rs  web.rs
log_parser/: Cargo.toml  logs.txt
log_parser/src/: main.rs  state.rs
log_parser/ui/: app-window.slint  epoch-tab.slint  sources-tab.slint  state-detail-panel.slint  timeline-tab.slint
manager/: Cargo.toml
manager/src/: main.rs
mls/: Cargo.toml
mls/src/: association.rs  client.rs  file_helpers.rs  group.rs  identity.rs  lib.rs  openmls_rust_persistent_crypto.rs  owner.rs  persistent_key_store.rs  serialize_any_hashmap.rs  utils.rs
mls_validation_service/: Cargo.toml  build.rs
mls_validation_service/src/: association.rs  cached_signature_verifier.rs  config.rs  handlers.rs  (+4 more)
performance/: Cargo.toml
simple_hyper/: Cargo.toml
uniffi_bindgen_generator/: Cargo.toml  README.md
xmtp/: Cargo.toml  README.md  diesel.toml
xmtp-debug/: Cargo.toml
xmtp_api/: Cargo.toml
xmtp_api_d14n/: Cargo.toml  README.md  q
xmtp_api_grpc/: Cargo.toml
xmtp_api_grpc_gateway/: Cargo.toml  README.md
xmtp_api_http/: Cargo.toml
xmtp_api_mls_gateway/: Cargo.toml
xmtp_api_web/: Cargo.toml
xmtp_archive/: Cargo.toml
xmtp_components/: Cargo.toml
xmtp_content_types/: Cargo.toml
(+5644 files in other folders)
