[workspace]
members = [
  "examples/cli",
  "mls_validation_service",
  "xmtp_cryptography",
  "xmtp_api_grpc",
  "xmtp_proto",
  "xmtp_mls",
  "xmtp_api",
  "xmtp_id",
  "bindings_wasm",
  "bindings_wasm_macros",
  "bindings_node",
  "bindings_ffi",
  "xmtp_debug",
  "xmtp_content_types",
  "common",
  "xmtp_api_d14n",
  "xmtp_macro",
  "xmtp_db",
  "xmtp_db_test",
  "xmtp_archive",
  "xmtp_mls_common",
  "xmtp_configuration",
  "db_tools",
]

# Used when cargo commands in the workspace root, such as `cargo test`, are run without flags.
# Excludes `bindings_wasm` by default, since those bindings only build for the WASM target.
default-members = [
  "examples/cli",
  "mls_validation_service",
  "xmtp_cryptography",
  "xmtp_api_grpc",
  "xmtp_proto",
  "xmtp_mls",
  "xmtp_api",
  "xmtp_id",
  "bindings_node",
  "bindings_ffi",
  "xmtp_debug",
  "xmtp_content_types",
  "common",
  "xmtp_api_d14n",
  "xmtp_macro",
  "xmtp_db",
  "xmtp_configuration",
]

# Make the feature resolver explicit.
# See https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"

[workspace.package]
license = "MIT"
version = "1.9.0-rc1"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
alloy = { version = "1.3", default-features = false }
anyhow = "1.0"
arc-swap = "1.7"
async-compression = { default-features = false, version = "0.4", features = [
  "futures-io",
  "zstd",
] }
async-trait = "0.1.77"
base64 = "0.22"
bincode = { version = "1.3" }
rustc-hash = "2.1.1"
bytes = "1.9"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
console_error_panic_hook = "0.1"
const_format = "0.2"
const_panic = "0.2"
ctor = "0.6"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
derive_builder = "0.20"
diesel = { version = "2.3", default-features = false }
diesel_migrations = { version = "2.2", default-features = false }
dyn-clone = "1"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
fdlimit = "0.3"
futures = { version = "0.3.30", default-features = false }
futures-test = { version = "0.3" }
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
getrandom = { version = "0.3", default-features = false }
gloo-timers = "0.3"
hex = { package = "const-hex", version = "1.14" }
hkdf = "0.12.3"
hpke-rs = { version = "0.4.0", features = [
  "hazmat",
  "serialization",
  "libcrux",
] }
indicatif = "0.18"
itertools = "0.14"
js-sys = "0.3"
mockall = { version = "0.13" }
mockall_double = "0.3.1"
once_cell = "1.2"
openmls = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374", default-features = false }
openmls_basic_credential = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_libcrux_crypto = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_rust_crypto = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
openmls_traits = { git = "https://github.com/xmtp/openmls", rev = "beb0884db264075aef271b96efbd7e9d102ee374" }
owo-colors = { version = "4.1" }
p256 = { version = "0.13.2", features = ["ecdsa"] }
parking_lot = "0.12.3"
pbjson = "0.8"
pbjson-types = "0.8"
pin-project-lite = "0.2"
proptest = { version = "1.9", default-features = false }
prost = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
# updating crates are blocked on https://github.com/dalek-cryptography/curve25519-dalek/pull/729
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.4"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
rstest = "0.26"
rstest_reuse = "0.7.0"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
sha2 = "0.10.8"
thiserror = "2.0"
tls_codec = "0.4.1"
tokio = { version = "1.47.0", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = [
  "compat",
] }
tonic = { version = "0.14", default-features = false }
tonic-web-wasm-client = "0.8"
tower = { version = "0.5", default-features = false }
trait-variant = "0.1.2"
tracing = { version = "0.1", features = ["log"] }
tracing-forest = { version = "0.3", features = ["chrono"] }
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false }
toxiproxy_rust = { git = "https://github.com/ephemeraHQ/toxiproxy_rust.git" }
url = "2.5.0"
uuid = "1.12"
vergen-git2 = "1.0.2"
# Any changes here need to be made with corresponding changes in .github/workflows
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4.51"
wasm-bindgen-test = "0.3.51"
web-sys = "0.3"
web-time = "1.1"
zeroize = "1.8"
smallvec = { version = "1.15", features = ["union"] }
http-body-util = { version = "0.1" }

# Internal Crate Dependencies
bindings-wasm = { path = "bindings_wasm" }
bindings_wasm_macros = { path = "bindings_wasm_macros" }
xmtp_api = { path = "xmtp_api" }
xmtp_api_d14n = { path = "xmtp_api_d14n" }
xmtp_api_grpc = { path = "xmtp_api_grpc" }
xmtp_archive = { path = "xmtp_archive" }
xmtp_common = { path = "common" }
xmtp_configuration = { path = "xmtp_configuration" }
xmtp_content_types = { path = "xmtp_content_types" }
xmtp_cryptography = { path = "xmtp_cryptography" }
xmtp_db = { path = "xmtp_db" }
xmtp_db_test = { path = "xmtp_db_test" }
xmtp_id = { path = "xmtp_id" }
xmtp_macro = { path = "xmtp_macro" }
xmtp_mls = { path = "xmtp_mls" }
xmtp_mls_common = { path = "xmtp_mls_common" }
xmtp_proto = { path = "xmtp_proto" }

[profile.dbg]
inherits = "dev"
debug = true
opt-level = 0
incremental = true
debug-assertions = true
overflow-checks = true
panic = "unwind"
strip = "none"

[profile.dev]
# Disabling full debug info speeds up builds
# and this only affects local crates, all dependencies have this disabled.
debug = "line-tables-only"

[profile.bench]
debug = true

[profile.release]
incremental = true
opt-level = "s"
panic = 'abort'

[profile.release-with-lto]
inherits = "release"
lto = true

# patch needed until some items
# are made public for third-party dependencies: https://github.com/diesel-rs/diesel/pull/4236
# (cfg-specific patche support does not exist)
[patch.crates-io]
diesel = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
diesel_migrations = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
arc_with_non_send_sync = "allow"
