[workspace]
members = [
  # Applications
  "apps/*",
  # Bindings
  "bindings/*",
  # Core crates
  "crates/*",
]
exclude = ["apps/android"]

# Default members must be part of workspace hack to maximize cache hits in CI/nix/crane
default-members = [
  # Applications
  "apps/mls_validation_service",
  # Bindings
  "bindings/*",
  # Core crates
  "crates/*",
]

# Make the feature resolver explicit.
# See https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "3"

[workspace.package]
license = "MIT"
version = "1.10.0"
rust-version = "1.94.0"
publish = false
edition = "2024"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
alloy = { version = "1.3", default-features = false }
anyhow = "1.0"
arc-swap = "1.7"
async-compression = { default-features = false, version = "0.4", features = [
  "futures-io",
  "zstd",
] }
async-trait = "0.1.77"
base64 = "0.22"
bincode = { version = "1.3" }
bon = "3.8"
bytes = "1.11.1"
chrono = "0.4.38"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
console_error_panic_hook = "0.1"
const_format = "0.2"
const_panic = "0.2"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
ctor = "0.6"
derive_builder = "0.20"
diesel = { version = "2.3", default-features = false }
diesel_migrations = { version = "2.2", default-features = false }
dyn-clone = "1"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
fdlimit = "0.3"
futures = { version = "0.3.30", default-features = false }
futures-test = { version = "0.3" }
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
getrandom = { version = "0.4", default-features = false }
gloo-timers = "0.3"
hex = { package = "const-hex", version = "1.14" }
hkdf = "0.12.3"
hpke-rs = { version = "0.6", features = ["hazmat", "serialization", "libcrux"] }
http = "1.2"
hyper = { version = "1.7", default-features = false }
hyper-util = "0.1"
indicatif = "0.18"
itertools = "0.14"
js-sys = "0.3"
libcrux-ed25519 = "0.0.6"
mockall = { version = "0.14" }
mockall_double = "0.3.1"
once_cell = "1.2"
# This git hash does not point to main because the single line change to it (rusqlite = 0.37) has a conflict
# with sqlx that doesn't allow cargo to resolve crates and so all of CI fails. To ensure that ongoing changes
# to main work, we will keep it on a separate branch until this can get resolved. xmtp/openmls/main is currently
# at 382a4649ae4e937ce933adb259e26d6381745731
openmls = { git = "https://github.com/xmtp/openmls", rev = "42f1479cdb06727da98132dfc2cc3959f2c66a14", default-features = false, features = [
  "extensions-draft-08",
] }
openmls_basic_credential = { git = "https://github.com/xmtp/openmls", rev = "42f1479cdb06727da98132dfc2cc3959f2c66a14" }
openmls_libcrux_crypto = { git = "https://github.com/xmtp/openmls", rev = "42f1479cdb06727da98132dfc2cc3959f2c66a14" }
openmls_rust_crypto = { git = "https://github.com/xmtp/openmls", rev = "42f1479cdb06727da98132dfc2cc3959f2c66a14" }
openmls_traits = { git = "https://github.com/xmtp/openmls", rev = "42f1479cdb06727da98132dfc2cc3959f2c66a14" }
owo-colors = { version = "4.1" }
p256 = { version = "0.13.2", features = ["ecdsa"] }
parking_lot = "0.12.3"
pbjson = "0.9"
pbjson-types = "0.9"
pin-project = "1.1"
proc-macro2 = "1.0"
proptest = { version = "1.9", default-features = false, features = ["std"] }
prost = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
quote = "1.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.10.4"
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls-no-provider",
  "json",
  "stream",
] }
rstest = "0.26"
rstest_reuse = "0.7.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false }
sha2 = "0.10.8"
syn = { version = "2.0", features = [
  "parsing",
  "proc-macro",
  "derive",
  "printing",
  "full",
  "clone-impls",
  "extra-traits",
] }
thiserror = "2.0"
tls_codec = "0.4.1"
tokio = { version = "1.47.0", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = [
  "compat",
] }
toml = "1.0.1"
tonic = { version = "0.14", default-features = false }
tonic-web-wasm-client = "0.9"
tower = { version = "0.5", default-features = false }
toxiproxy_rust = { git = "https://github.com/ephemeraHQ/toxiproxy_rust.git" }
tracing = { version = "0.1", features = ["log"] }
tracing-forest = { version = "0.3", features = ["chrono"] }
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-web = "0.1"
trait-variant = "0.1.2"
tsify = { version = "0.5", default-features = false, features = ["js"] }
url = { version = "2.5.0", default-features = false }
uuid = "1.12"
valuable = { version = "0.1", features = ["derive"] }
vergen-gix = "9.1"
wasm-streams = "0.5"
zstd = { default-features = false, version = "0.13" } # needed to enable wasm feature for async-compression

# Any changes here need to be made with corresponding changes in .github/workflows
http-body-util = { version = "0.1" }
smallvec = { version = "1.15", features = ["union"] }
time = "0.3.47"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.51"
wasm-bindgen-test = "0.3.51"
web-sys = "0.3"
web-time = "1.1"
zeroize = "1.8"

# Internal Crate Dependencies
bindings-wasm = { path = "bindings/wasm" }
bindings_wasm_macros = { path = "crates/wasm_macros" }
xmtp-workspace-hack = "0.1.0"
xmtp_api = { path = "crates/xmtp_api" }
xmtp_api_d14n = { path = "crates/xmtp_api_d14n" }
xmtp_api_grpc = { path = "crates/xmtp_api_grpc" }
xmtp_archive = { path = "crates/xmtp_archive" }
xmtp_common = { path = "crates/xmtp_common" }
xmtp_configuration = { path = "crates/xmtp_configuration" }
xmtp_content_types = { path = "crates/xmtp_content_types" }
xmtp_cryptography = { path = "crates/xmtp_cryptography" }
xmtp_db = { path = "crates/xmtp_db" }
xmtp_db_test = { path = "crates/xmtp_db_test" }
xmtp_id = { path = "crates/xmtp_id" }
xmtp_macro = { path = "crates/xmtp_macro" }
xmtp_mls = { path = "crates/xmtp_mls" }
xmtp_mls_common = { path = "crates/xmtp_mls_common" }
xmtp_proto = { path = "crates/xmtp_proto" }

[profile.dbg]
debug = true
debug-assertions = true
incremental = true
inherits = "dev"
opt-level = 0
overflow-checks = true
panic = "unwind"
strip = "none"

[profile.dev]
# Disabling full debug info speeds up builds
# and this only affects local crates, all dependencies have this disabled.
debug = "line-tables-only"

[profile.bench]
debug = true

[profile.release]
incremental = true
opt-level = "s"
panic = 'abort'

[profile.release-with-lto]
inherits = "release"
lto = true

# patch needed until some items
# are made public for third-party dependencies: https://github.com/diesel-rs/diesel/pull/4236
# (cfg-specific patche support does not exist)
[patch.crates-io]
diesel = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
diesel_migrations = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }

[patch.crates-io.xmtp-workspace-hack]
path = "crates/xmtp-workspace-hack"

[workspace.lints.clippy]
arc_with_non_send_sync = "allow"
uninlined_format_args = "allow"
