[workspace]
members = [
  # Applications
  "apps/*",
  "apps/xnet/*",
  # Bindings
  "bindings/*",
  # Core crates
  "crates/*",
]

exclude = ["apps/android", "apps/xnet/Cargo.toml", "apps/xnet/assets"]

# Default members must be part of workspace hack to maximize cache hits in CI/nix/crane
default-members = [
  "apps/mls_validation_service",
  # Bindings
  "bindings/*",
  # Core crates
  "crates/*",
]

# Make the feature resolver explicit.
# See https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "3"

[workspace.package]
license = "MIT"
version = "1.11.0-dev"
rust-version = "1.94.0"
publish = false
edition = "2024"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
alloy = { version = "2", default-features = false }
alloy-primitives = { version = "1", default-features = false, features = [
  "std",
] }
alloy-signer-local = { version = "2", default-features = false }
anyhow = "1.0"
arc-swap = "1.9"
async-compression = { default-features = false, version = "0.4", features = [
  "futures-io",
  "zstd",
] }
async-trait = "0.1.89"
base64 = "0.22"
bincode = { version = "1.3" }
bon = "3.9"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
console_error_panic_hook = "0.1"
const_format = "0.2"
const_panic = "0.2"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
ctor = "0.12"
derive_builder = "0.20"
diesel = { version = "2.3", default-features = false }
diesel_migrations = { version = "2.2", default-features = false }
dyn-clone = "1"
ecdsa = "0.16"
ed25519-dalek = { version = "2.2", features = ["zeroize"] }
fdlimit = "0.3"
futures = { version = "0.3.32", default-features = false }
futures-test = { version = "0.3" }
futures-timer = { version = "3.0", features = ["wasm-bindgen"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
getrandom = { version = "0.4", default-features = false }
gloo-timers = "0.4"
hex = { package = "const-hex", version = "1.14" }
# must stay on this version for compatibility with sha2 and ed25519_dalek
hkdf = "0.12.3"
hpke-rs = { version = "0.6", features = ["hazmat", "serialization", "libcrux"] }
http = "1.4"
hyper = { version = "1.9", default-features = false }
hyper-util = "0.1"
indicatif = "0.18"
itertools = "0.14"
js-sys = "0.3"
libcrux-ed25519 = "0.0.7"
lru = "0.18"
mockall = { version = "0.14" }
mockall_double = "0.3.1"
once_cell = "1.21.4"
openmls = { git = "https://github.com/xmtp/openmls", rev = "e125674303a715b00bf133ceba903862304eac83", default-features = false, features = [
  "extensions-draft-08",
] }
openmls_basic_credential = { git = "https://github.com/xmtp/openmls", rev = "e125674303a715b00bf133ceba903862304eac83" }
openmls_libcrux_crypto = { git = "https://github.com/xmtp/openmls", rev = "e125674303a715b00bf133ceba903862304eac83", features = [
  "extensions-draft-08",
] }
openmls_rust_crypto = { git = "https://github.com/xmtp/openmls", rev = "e125674303a715b00bf133ceba903862304eac83" }
openmls_traits = { git = "https://github.com/xmtp/openmls", rev = "e125674303a715b00bf133ceba903862304eac83", features = [
  "extensions-draft-08",
] }
owo-colors = { version = "4.1" }
p256 = { version = "0.13.2", features = ["ecdsa"] }
parking_lot = "0.12.5"
pbjson = "0.9"
pbjson-types = "0.9"
pin-project = "1.1"
proc-macro2 = "1.0"
proptest = { version = "1.11", default-features = false, features = ["std"] }
prost = { version = "0.14", default-features = false }
prost-types = { version = "0.14", default-features = false }
quote = "1.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "rustls-no-provider",
  "json",
  "stream",
] }
rstest = "0.26"
rstest_reuse = "0.7.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
semver = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false }
serde_path_to_error = "0.1"
# must stay on this version for compatibility with ed25519_dalek
sha2 = "0.10.9"
syn = { version = "2.0", features = [
  "parsing",
  "proc-macro",
  "derive",
  "printing",
  "full",
  "clone-impls",
  "extra-traits",
] }
thiserror = "2.0"
tls_codec = "0.4.2"
tokio = { version = "1.50.0", default-features = false, features = [
  "macros",
  "rt",
  "time",
  "sync",
  "tracing",
] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = [
  "compat",
] }
toml = "1.1.1"
tonic = { version = "0.14", default-features = false }
tonic-web-wasm-client = "0.9"
tower = { version = "0.5", default-features = false }
toxiproxy_rust = { git = "https://github.com/ephemeraHQ/toxiproxy_rust.git" }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-forest = { version = "0.3", features = ["chrono"] }
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-web = "0.1"
# OpenTelemetry stack (opt-in via the `otel` feature). Versions chosen for
# tracing-subscriber 0.3 / tracing-opentelemetry 0.31 compatibility.
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.31"
trait-variant = "0.1.2"
tsify = { version = "0.5", default-features = false, features = ["js"] }
url = { version = "2.5.8", default-features = false }
uuid = "1.23"
valuable = { version = "0.1", features = ["derive"] }
vergen-gix = "9.1"
warp = { version = "0.4", features = ["server"] }
wasm-streams = "0.5"
# zstd = { default-features = false, version = "0.13" } # needed to enable wasm feature for async-compression

# Any changes here need to be made with corresponding changes in .github/workflows
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
http-body-util = { version = "0.1" }
smallvec = { version = "1.15", features = ["union"] }
time = "0.3.47"
wasm-bindgen = "=0.2.120"
wasm-bindgen-futures = "0.4.51"
wasm-bindgen-test = "0.3.51"
web-sys = "0.3"
web-time = "1.1"
zeroize = "1.8"

# Internal Crate Dependencies
bindings-wasm = { path = "bindings/wasm" }
bindings_wasm_macros = { path = "crates/wasm_macros" }
xmtp-workspace-hack = "0.1.0"
xmtp_api = { path = "crates/xmtp_api" }
xmtp_api_d14n = { path = "crates/xmtp_api_d14n" }
xmtp_api_grpc = { path = "crates/xmtp_api_grpc" }
xmtp_archive = { path = "crates/xmtp_archive" }
xmtp_common = { path = "crates/xmtp_common" }
xmtp_configuration = { path = "crates/xmtp_configuration" }
xmtp_content_types = { path = "crates/xmtp_content_types" }
xmtp_cryptography = { path = "crates/xmtp_cryptography" }
xmtp_db = { path = "crates/xmtp_db" }
xmtp_db_test = { path = "crates/xmtp_db_test" }
xmtp_id = { path = "crates/xmtp_id" }
xmtp_macro = { path = "crates/xmtp_macro" }
xmtp_mls = { path = "crates/xmtp_mls" }
xmtp_mls_common = { path = "crates/xmtp_mls_common" }
xmtp_proto = { path = "crates/xmtp_proto" }
xnet-cli = { path = "apps/xnet/cli" }
xnet-lib = { path = "apps/xnet/lib" }

[profile.dbg]
debug = true
debug-assertions = true
incremental = true
inherits = "dev"
opt-level = 0
overflow-checks = true
panic = "unwind"
strip = "none"

[profile.dev]
# Disabling full debug info speeds up builds
# and this only affects local crates, all dependencies have this disabled.
debug = "line-tables-only"

[profile.bench]
debug = true

[profile.release]
incremental = true
opt-level = "s"
panic = 'abort'

[profile.release-with-lto]
inherits = "release"
lto = true

# patch needed until some items
# are made public for third-party dependencies: https://github.com/diesel-rs/diesel/pull/4236
# (cfg-specific patche support does not exist)
[patch.crates-io]
diesel = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
diesel_migrations = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
# xmtp/hpke-rs fork of v0.6.1 with one extra commit adding
# XWingDraft06Obsolete dispatch in the libcrux backend. Lets the
# welcome wrapper pin to the obsolete 0x004D codepoint for wire compat
# with v1.9 / v1.10 clients (hpke-rs 0.4). All four sister crates patch
# together: they're one workspace with internal path deps, so patching
# only the backend produces two HpkeCrypto trait versions in the graph
# and breaks openmls_libcrux_crypto. Remove when the d14n cutover
# migrates everyone to 0x647a (#3661).
hpke-rs = { git = "https://github.com/xmtp/hpke-rs", rev = "3425025bb43b68bdef28ce47da8013ae13b69cbc" }
hpke-rs-crypto = { git = "https://github.com/xmtp/hpke-rs", rev = "3425025bb43b68bdef28ce47da8013ae13b69cbc" }
hpke-rs-libcrux = { git = "https://github.com/xmtp/hpke-rs", rev = "3425025bb43b68bdef28ce47da8013ae13b69cbc" }
hpke-rs-rust-crypto = { git = "https://github.com/xmtp/hpke-rs", rev = "3425025bb43b68bdef28ce47da8013ae13b69cbc" }
tracing-oslog = { git = "https://github.com/xmtp/tracing-oslog", rev = "69cebec3804c33267b8d18aa50a5d9ba18617121" }

[patch.crates-io.xmtp-workspace-hack]
path = "crates/xmtp-workspace-hack"

[workspace.lints.clippy]
arc_with_non_send_sync = "allow"
uninlined_format_args = "allow"
