[package]
name = "benches"
edition = "2024"
license.workspace = true
version.workspace = true

[[bin]]
name = "streaming"
path = "src/streaming.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5.49", features = ["derive"] }
color-eyre.workspace = true
futures.workspace = true
indicatif.workspace = true
parking_lot.workspace = true
rand.workspace = true
ratatui = "0.29.0"
rlimit = "0.10.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tui-logger = "0.17.4"
xmtp_mls = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true

[features]
bench = []
test-utils = []
