[package]
edition = "2021"
name = "xmtpv3"
version.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures.workspace = true
log = { version = "0.4", features = ["std"] }
parking_lot.workspace = true
thiserror.workspace = true
thread-id = "4.2.1"
tokio = { workspace = true, features = ["macros"] }
uniffi = { version = "0.28.0", default-features = false, features = ["tokio"] }
xmtp_api_grpc = { path = "../xmtp_api_grpc" }
xmtp_cryptography = { path = "../xmtp_cryptography" }
xmtp_id = { path = "../xmtp_id" }
xmtp_mls = { path = "../xmtp_mls", features = ["message-history"] }
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }
xmtp_user_preferences = { path = "../xmtp_user_preferences" }
xmtp_v2 = { path = "../xmtp_v2" }
tonic.workspace = true

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }

[[bin]]
name = "ffi-uniffi-bindgen"
path = "bindgen/bin.rs"
required-features = ["uniffi/cli"]

[dev-dependencies]
ethers = { workspace = true, features = ["rustls"] }
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uniffi = { version = "0.28.0", features = ["bindgen-tests"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
xmtp_mls = { path = "../xmtp_mls", features = ["test-utils"] }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }
xmtp_api_grpc = { path = "../xmtp_api_grpc", features = ["test-utils"] }

