[package]
edition = "2021"
name = "xmtpv3"
version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures.workspace = true
hex.workspace = true
parking_lot.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
  "fmt",
  "json",
] }
uniffi = { version = "0.29.0", default-features = false, features = ["tokio"] }
xmtp_api.workspace = true
xmtp_api_grpc.workspace = true
xmtp_common.workspace = true
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

# Bench
criterion = { workspace = true, optional = true }
fdlimit = { version = "0.3", optional = true }


[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
tracing_android_trace = { version = "0.1", features = ["api_level_29"] }

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.2"

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[[bin]]
name = "ffi-uniffi-bindgen"
path = "bindgen/bin.rs"
required-features = ["uniffi/cli"]

[dev-dependencies]
ethers = { workspace = true, features = ["rustls"] }
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uniffi = { version = "0.29.0", features = ["bindgen-tests"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
xmtp_api_grpc = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["test-utils"] }
xmtp_db = { workspace = true, features = ["test-utils"] }
xmtp_proto = { workspace = true, features = ["test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }
chrono = { workspace = true }
async-trait.workspace = true
fdlimit = { workspace = true }
ctor.workspace = true

[features]
bench = ["xmtp_mls/bench", "xmtp_common/bench", "dep:criterion", "dep:fdlimit"]

[[bench]]
harness = false
name = "create_client"
required-features = ["bench"]
