[package]
edition = "2024"
name = "xmtpv3"
version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
futures.workspace = true
hex.workspace = true
parking_lot.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true, features = [
  "registry",
  "env-filter",
  "fmt",
  "json",
] }
uniffi = { version = "0.29.0", default-features = false, features = ["tokio"] }
xmtp_api.workspace = true
xmtp_api_d14n.workspace = true
xmtp_api_grpc.workspace = true
xmtp_common = { workspace = true, features = ["logging"] }
xmtp_configuration.workspace = true
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto.workspace = true

# Bench
alloy = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }
fdlimit = { version = "0.3", optional = true }


[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = "0.2"
tracing_android_trace = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.2"

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
vergen-git2 = { workspace = true, features = ["build"] }

[[bin]]
name = "ffi-uniffi-bindgen"
path = "bindgen/bin.rs"
required-features = ["uniffi/cli"]

[[bin]]
name = "ffi-uniffi-bindgen-swift"
path = "bindgen/bin-swift.rs"
required-features = ["uniffi/cli"]

[dev-dependencies]
alloy.workspace = true
async-trait.workspace = true
chrono = { workspace = true }
ctor.workspace = true
fdlimit = { workspace = true }
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
uniffi = { version = "0.29.0", features = ["bindgen-tests"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
xmtp_api_grpc = { workspace = true, features = ["test-utils"] }
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_configuration = { workspace = true, features = ["test-utils"] }
xmtp_db = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["test-utils"] }
xmtp_proto = { workspace = true, features = ["test-utils"] }


[features]
bench = [
  "xmtp_mls/bench",
  "xmtp_common/bench",
  "dep:criterion",
  "dep:fdlimit",
  "dep:alloy",
]
d14n = []
dev = ["xmtp_configuration/dev", "xmtp_mls/dev"]

[[bench]]
harness = false
name = "create_client"
required-features = ["bench"]

[lints]
workspace = true
