[package]
name = "xmtp_bindings_flutter"
version = "0.0.1-development"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
flutter_rust_bridge = "1.82.4"
xmtp_crypto = { path = "../xmtp_crypto" }
xmtp_user_preferences = { path = "../xmtp_user_preferences" }
