[package]
name = "xmtp_bindings_flutter"
version = "0.0.1-development"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
flutter_rust_bridge = "=2.0.0-dev.22"
futures = "0.3.28"
thiserror = "1.0.56"
tokio = { version = "1.28.1", features = ["macros"] }
xmtp_api_grpc = { path = "../xmtp_api_grpc" }
xmtp_cryptography = { path = "../xmtp_cryptography" }
xmtp_mls = { path = "../xmtp_mls" }
xmtp_proto = { path = "../xmtp_proto" }
xmtp_user_preferences = { path = "../xmtp_user_preferences" }

[dev-dependencies]
tokio = { version = "1.28.1", features = ["full"] }
