[package]
edition = "2021"
name = "bindings_node"
version.workspace = true

[lints.clippy]
uninlined_format_args = "allow"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
futures.workspace = true
hex.workspace = true
napi = { git = "https://github.com/napi-rs/napi-rs", branch = "main", version = "3.0.0-beta.11", default-features = false, features = [
  "napi4",
  "napi6",
  "async",
  "serde-json",
  "web_stream",
] }
napi-derive = { git = "https://github.com/napi-rs/napi-rs", branch = "main", version = "3.0.0-beta.11" }
prost.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
  "chrono",
] }
xmtp_api.workspace = true
xmtp_api_grpc.workspace = true
xmtp_common = { workspace = true, features = ["logging"] }
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { workspace = true, features = ["proto_full"] }
[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
chrono = { workspace = true }

[package.metadata.cross.build.env]
volumes = ["__LIB12_DEP=../"]
