[package]
edition = "2024"
name = "bindings_node"
version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.4.0", default-features = false, features = [
  "napi6",
  "async",
  "serde-json",
] }
napi-derive = "3.3.0"
prost.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "fmt",
  "json",
  "chrono",
] }
xmtp_api.workspace = true
xmtp_api_d14n.workspace = true
xmtp_common = { workspace = true, features = ["logging"] }
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls.workspace = true
xmtp_proto = { workspace = true, features = [] }

toxiproxy_rust = { workspace = true, optional = true }

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
chrono = { workspace = true }
toxiproxy_rust.workspace = true
xmtp_proto = { workspace = true, features = ["test-utils"] }

[package.metadata.cross.build.env]
volumes = ["__LIB12_DEP=../"]

[features]
test-utils = [
  "xmtp_mls/test-utils",
  "dep:toxiproxy_rust",
  "xmtp_proto/test-utils",
]
