[package]
name = "xmtp_rust_swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmtp = { path = "../xmtp" }
xmtp_crypto = { path = "../xmtp_crypto" }
xmtp_networking = { path = "../xmtp_networking" }
xmtp_proto = { git = "https://github.com/xmtp/libxmtp", rev = "0ee34007e10add84152a1af411648699f06f64fa" }
prost = { version = "0.11", features = ["prost-derive"] }
swift-bridge = {version = "0.1", features = ["async"]}
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }

[lib]
name = "xmtp_rust_swift"
crate-type = [ "staticlib" ]

[build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

# NOTE: Thei release profile reduce bundle size from 230M to 41M - may have performance impliciations
# https://stackoverflow.com/a/54842093
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
