[package]
edition = "2021"
name = "bindings_wasm"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook.workspace = true
futures.workspace = true
hex.workspace = true
js-sys.workspace = true
pin-project-lite = { workspace = true }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-web = "0.1"
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
xmtp_api.workspace = true
xmtp_api_http = { path = "../xmtp_api_http" }
xmtp_common = { workspace = true, features = ["logging"] }
xmtp_content_types.workspace = true
xmtp_cryptography.workspace = true
xmtp_db.workspace = true
xmtp_id.workspace = true
xmtp_mls = { workspace = true, features = ["http-api"] }
xmtp_proto = { workspace = true, features = ["proto_full"] }

[dev-dependencies]
chrono = { workspace = true }
wasm-bindgen-test.workspace = true
xmtp_common = { workspace = true, features = ["test-utils"] }
xmtp_mls = { workspace = true, features = ["http-api", "test-utils"] }
